# bgp-agent

./: README.md  bgp_agent.py  requirements.txt  setup.cfg  setup.py
bgp_agent/: agent.py  config.py  constants.py  ovn_agent.py
bgp_agent/cmd/: agent.py
bgp_agent/events/: osp_events.py
bgp_agent/platform/: driver_api.py
bgp_agent/platform/osp/: ovn_bgp_driver.py  ovn_driver.py  ovn_evpn_driver.py  watcher.py
bgp_agent/platform/osp/utils/: frr.py  ovn.py  ovs.py
bgp_agent/platform/osp/watchers/: evpn_watcher.py
bgp_agent/platform/utils/: linux_net.py
bgp_agent/utils/: ovn.py  ovs.py  utils.py
