[metadata]
name = bgp-agent
summary = BGP OVN Agent
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[entry_points]
console_scripts =
    bgp-agent = bgp_agent.cmd.agent:start

bgp_agent.platform =
    osp_ovn_bgp_driver = bgp_agent.platform.osp.ovn_bgp_driver:OSPOVNBGPDriver
    osp_ovn_evpn_driver = bgp_agent.platform.osp.ovn_evpn_driver:OSPOVNEVPNDriver

[files]
packages =
    bgp_agent
